Alignment fix
Fixing - About us image/ Our values

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -95,6 +95,9 @@
     width: 3px;
     background-color: #fff;
 }
+
+    
+
 .ourValues{
     position: relative;
     padding: 4vw 0;
@@ -146,11 +149,13 @@
     
 }
 .imgbox {
-    background: url(../assets/images/Nucare_Value_1-min.jpg);
+    background: url(../assets/images/Nucare_Value_2-min.jpg);
     background-position: top;
     background-size: cover;
     min-height: 460px;
     width: 100%;
+    
+
 }
 .emptybox {
     width: 100%;
@@ -217,10 +222,10 @@ span {
     .innerValues ul li{ padding: 10px;}  
 @media (min_width:600px)
 {
-p{
-    font-size:1.25rem; 
-    line-height: 1.5;
-}
+        p{
+            font-size:1rem; 
+            line-height: 1.5;
+        }
 
 }
 
@@ -406,14 +411,24 @@ p{
     transition: all 0.8s ease;
   }
 
+  .ourValueImg{
+
+    height:680px;
+  }
+
   @media only screen and (max-width: 825px) {
     .box {
         width: 600px;
     }
+
+    .innerValues{
+        font-size: 1rem;
+        .innerValues ul li{ padding: 5px !important;} 
+    }
     
-.introimg {
-   width:200px;
-}
+    .introimg {
+    width:200px;
+    }
 
     .mainTitle {
         text-align: center;
@@ -426,25 +441,25 @@ p{
         font-weight: 600;
     }
 
-    .imgbox {
-        min-height: 460px;
-        width: 100%;
-    }
-
     .landpage {
         width: 100%;
-        height: 300px;
+        height: 500px;
         background-size: cover;
         background-repeat: no-repeat;
     }
 
-    .imgbox {
-        background: url(../assets/images/Nucare_Value_1.1-min.jpg);
-        background-position: top;
-        background-size: cover;
-        min-height: 400px;
+    .imgbox {     
+        background: url(../assets/images/Nucare_Value_1.1-min.jpg);   
+        background-size: 250px !important;
+        background-repeat: no-repeat;
+        min-height:300px;
         width: 100%;
+        margin-top: 100px;
     }
+
+    .ourValueImg{
+        height:480px;
+      }
 }
 
 @media (max-width: 768px) {
@@ -473,8 +488,22 @@ p{
     .ifimg {
         width: 100%;
     }
-
-    .imgbox {
-        min-height: 500px;
+    .imgbox {     
+        background-size: 200px !important;      
+        margin-top: 0;
     }
+    .ourValueImg{
+        height:380px;
+      }
+
+  
 }
+@media(max-width:500px){
+    #about{
+        .box{
+            margin:unset;
+        }
+    }
+
+}
+
